Save tasks to local storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,28 @@
 <app-header />
 <main>
   <ul id="users">
+    @for (user of users;track user.id){
     <li>
       <app-user
-        [id]="users[0].id"
-        [avatar]="users[0].avatar"
-        [name]="users[0].name"
+        [user]="user"
+        [selected]="user.id === selectedUserId"
         (select)="onSelectUser($event)"
       />
     </li>
-    <li>
-      <app-user
-        [id]="users[1].id"
-        [avatar]="users[1].avatar"
-        [name]="users[1].name"
-        (select)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user
-        [id]="users[2].id"
-        [avatar]="users[2].avatar"
-        [name]="users[2].name"
-        (select)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user
-        [id]="users[3].id"
-        [avatar]="users[3].avatar"
-        [name]="users[3].name"
-        (select)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user
-        [id]="users[4].id"
-        [avatar]="users[4].avatar"
-        [name]="users[4].name"
-        (select)="onSelectUser($event)"
-      />
-    </li>
+    }
+    <!-- <li *ngFor="let user of users">
+      <app-user [user]="user" (select)="onSelectUser($event)" />
+    </li> -->
   </ul>
-  <app-tasks [name]="selectedUser?.name"></app-tasks>
+  @if (selectedUser){
+  <app-tasks [name]="selectedUser.name" [userId]="selectedUser.id"></app-tasks>
+  } @else {
+  <p>Select a user to see thier tasks</p>
+  }
+
+  <!-- <app-tasks
+    *ngIf="selectedUser; else fallback"
+    [name]="selectedUser.name"
+  ></app-tasks>
+  <ng-template #fallback><p>Select a user to see thier tasks</p></ng-template> -->
 </main>
