--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,20 @@
-<p>{{ name }}</p>
+@if(showAddTaskCard){
+<app-add-task (close)="onAddTaskClose()" [userId]="userId"></app-add-task>
+
+}
+<section id="tasks">
+  <header>
+    <h2>{{ name }} 's Tasks</h2>
+    <menu>
+      <button (click)="onStartAddTask()">Add Task</button>
+    </menu>
+  </header>
+
+  <ul>
+    @for (task of selectedUserTasks; track task.id) {
+    <li>
+      <app-task [task]="task"></app-task>
+    </li>
+    }
+  </ul>
+</section>
